api specs + env vars for services

--- a/services/billing-csharp/Billing.csproj
+++ b/services/billing-csharp/Billing.csproj
@@ -4,6 +4,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- existing packages… -->
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Remove="Tests\**\*.cs" />
   </ItemGroup>
 </Project>
